java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/OrigCreateMethodTest/testCreateConstructor1.pass
package org.netbeans.test.java.hints;

public class CreateConstructor1 {
    
    public CreateConstructor1() {
    }

    private CreateConstructor1(int i) {
        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
    }
    
    public final void main(String[] args) {
        new CreateConstructor1(1);
    }

}
